# hericendre

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  build.sh  main.py  pyproject.toml  setup.py  vcpkg.json
.github/workflows/: build.yml
decay/: __init__.py  chain.py  cram.py  cram.yml  nuclide.py  solver.py  utils.py
hericendre/: __init__.py  chain.py  cram.py  utils.py
inc/: chain.h  chain.hpp  cramsolver.h  decay.h  decay.hpp  decaysolver.h  fission.h  fission.hpp  input.h  model.h  nfy.hpp  nreaction.h  nreaction.hpp  nuclide.h  nuclide.hpp  results.h  solver.h  solver.hpp  source.h  source.hpp  utils.h  utils.hpp
src/: chain.cpp  cramsolver.cpp  decay.cpp  decaysolver.cpp  fission.cpp  input.cpp  main.cpp  model.cpp  nfy.cpp  nreaction.cpp  nuclide.cpp  results.cpp  solver.cpp  source.cpp  utils.cpp
src/hericendre/: __init__.py  model.py  results.py  units.py
src/python/: chain.cpp  model.cpp  nuclide.cpp  pyHericendre.cpp
