[project]
name = "hericendre"
version = "0.1.0"
description = "A radioactive decay and fuel depletion code"
readme = "README.md"
authors = [{ name = "Nicolas Linden", email = "nicolas@nlinden.com" }]
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.13.0",
    "numpy>=2.2.4",
    "pint>=0.24.4",
    "polars>=1.26.0",
]


[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"

[tool.cibuildwheel]
build = ["*-manylinux_x86_64", "*-macosx_arm64", "*-macosx_x86_64"]

[tool.cibuildwheel.linux]
environment = { "CMAKE_ARGS" = "-DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX", "CC" = "/opt/rh/devtoolset-10/root/usr/bin/gcc", "CXX" = "/opt/rh/devtoolset-10/root/usr/bin/g++" }
build-verbosity = 3
